primitives/api/test/tests/ui/mock_only_one_block_type.stderr
error: Block type should be the same between all runtime apis.
  --> $DIR/mock_only_one_block_type.rs:22:12
   |
22 |     impl Api2<Block2> for MockApi {
   |               ^^^^^^

error: First block type found here
  --> $DIR/mock_only_one_block_type.rs:18:11
   |
18 |     impl Api<Block> for MockApi {
   |              ^^^^^

warning: unused import: `substrate_test_runtime_client::runtime::Block`
 --> $DIR/mock_only_one_block_type.rs:1:5
  |
1 | use substrate_test_runtime_client::runtime::Block;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default
